# unicode

./: CMakeLists.txt  LICENSE  README.md
include/: unicode.h
src/: unicode.cpp
test/: catch.hpp  unicode.cpp
